deployment/kubernetes/service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tracetrail
